--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -78,9 +78,11 @@ ul li a {
 @keyframes moveDown{
     from{
         opacity: 0.3;
-        transform:translateX(-100px);
+        visibility: hidden;
+        transform:translateX(-150px);
     }
     to {
+        visibility: visible;
         opacity: 1;
         transform: translateX(0px);
     }
@@ -140,16 +142,18 @@ ul li a {
     background: linear-gradient(rgba(70, 121, 155, 0.5),rgba(116, 25, 161, 0.5));
     justify-content: space-evenly;
     align-items: center;
+    padding-left:15px;
+    padding-right: 15px;
 }
 .myinfo,.myskills{
     max-width:500px;
     width:100%;
 }
 .myinfo h1,.myskills h2{
-    font-size:4vw;
+    font-size:3.2vw;
     font-weight: 500;
     font-family: 'Pacifico',cursive;
-    margin-bottom: 20px;
+    margin-bottom: 15px;
     margin-top:20px;
     user-select: none;
 }
@@ -181,7 +185,7 @@ ul li a {
     from{
         opacity: 0;
         visibility: hidden;
-        transform: translateX(300px);
+        transform: translateX(200px);
     }
     to {
         visibility: visible;
@@ -218,6 +222,21 @@ ul li a {
     margin-bottom: 20px;
     user-select: none;
     perspective: 10;
+}
+.p_title{
+    line-height: 30px;
+}
+.product-title{
+    display:flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.product-title a{
+    text-decoration:none;
+    padding:4px 8px 4px 8px;
+    background: #000;
+    color: white;
+    border-radius: 10px;
 }
 @keyframes moveRight{
     from{
@@ -305,13 +324,109 @@ ul li a {
 /* test code ends */ 
 /* TEST SUCCESSFULL 😀 */
 /* project section css ends here */
+
+/* contact section css starts here */
 #contactme{
-    /* background: linear-gradient(rgba(145, 9, 38, 0.5),rgba(64, 3, 87, 0.5)); */
     background: linear-gradient(rgba(70, 121, 155, 0.5),rgba(116, 25, 161, 0.5));
+    display: flex;
+    flex-direction: column;
+    justify-content:center;
+    align-items: space-evenly;
+}    
+#contactme h1{
+    font-size:4vw;
+    font-weight: 500;
+    font-family: 'Pacifico',cursive;
+    user-select: none;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 30px;
 }
+.socialMedia{
+    display: flex;
+    justify-content:space-evenly;
+    height:50vh;
+    align-items: center;
+    flex-wrap: wrap;
+}
+.socialMedia > div{
+    width:100%;
+    max-width:400px;
+    height: 170px;
+    margin-left:15px;
+    margin-right: 15px;
+    margin-bottom: 25px;
+    border-radius: 10px;
+    box-shadow: 5px 5px 5px rgba(90, 89, 89, 0.5);
+    background:linear-gradient(rgba(122, 122, 122, 0.5),rgba(237, 237, 238, 0.5));
+    /* background: red; */
+    transition:2s;
+}
+.socialMedia > div:hover{
+    background:linear-gradient(to right,rgba(212, 209, 209, 0.3),rgba(189, 187, 187, 0.5));
+    /* background: yellow; */
+}
+.linkedin,.mail{
+    box-sizing: border-box;
+    display: flex;
+    padding-left: 45px;
+    padding-right: 45px;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.contact_info{
+    display: flex;
+    flex-direction: column;
+    justify-content:space-between;
+    align-items:flex-start;
+}
+.socialMedia > div .contact_info h3{
+    color:white;
+    padding-left: 30px;
+    font-size: 20px;
+    font-family: 'Montserrat';
+    opacity:1;
+    visibility: visible;
+    transition:visibility 1s, opacity 1s;
+}
+/* .socialMedia > div:hover .contact_info{
+    opacity:0;
+    visibility: hidden;
+} */
+
+@keyframes moveUp{
+    from{
+        opacity: 0;
+        visibility: hidden;
+        perspective: 0;
+        transform: translateY(150px);
+    }
+    to {
+        visibility: visible;
+        opacity: 1;
+        perspective: 10;
+        transform: translateY(0px);
+    }
+  }
+/* contact section css ends here */
+
+/* copyright */
+#copyright{
+    position: absolute;
+    top:395%;
+    left: 50%;
+    transform: translateX(-50%);
+}
+/* copyright ends here */
+
 @media screen and (max-width:799px){
     .navbar{
         display:none;
+    }
+    #copyright{
+        top:495%;
+        font-size: 2.8vw;
     }
     #aboutme{
         flex-direction: column;
@@ -363,7 +478,7 @@ ul li a {
     .logoName h1{
         font-size: 6vw;
     }
-    @keyframes moveUp{
+    @keyframes emerge{
         from{
             opacity: 0;
             padding:2px;
@@ -377,7 +492,7 @@ ul li a {
       }
 }
 @media screen and (max-width:500px){
-    .project_information h2{
+    .project_information h2,#contactme h1{
         font-size: 8vw;
     }
     .intro_page_content h2{
