--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -425,8 +425,9 @@ ul li a {
         display:none;
     }
     #copyright{
-        top:490%;
-        font-size: 2.8vw;
+        display:none;
+/*         top:490%; */
+/*         font-size: 2.8vw; */
     }
     #aboutme{
         flex-direction: column;
